@@ -4,7 +4,7 @@
       "Yoshihiro Sasaki"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Minilla/v0.4.6, CPAN::Meta::Converter version 2.120921",
+   "generated_by" : "Minilla/v0.4.6, CPAN::Meta::Converter version 2.130880",
    "license" : [
       "perl_5"
    ],
